[gd_scene load_steps=4 format=3 uid="uid://n5q48eoj5nb5"]

[ext_resource type="Script" uid="uid://6wevlv4roey7" path="res://Scripts/level_select.gd" id="1_rp7yy"]
[ext_resource type="Texture2D" uid="uid://cfn4an3odfido" path="res://Sprite Frames/pixelForrest.jpg" id="2_nkys2"]
[ext_resource type="AudioStream" uid="uid://dn3le81d0feta" path="res://Audio/happy-relaxing-loop-275536.mp3" id="3_lx4vd"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rp7yy")

[node name="PixelForrest" type="Sprite2D" parent="."]
position = Vector2(578, 326)
scale = Vector2(1.8, 1.8)
texture = ExtResource("2_nkys2")

[node name="Level1" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 216.0
offset_right = 276.0
offset_bottom = 247.0
scale = Vector2(3.80427, 3.21455)
theme_override_colors/font_color = Color(0.219608, 0.682353, 0.815686, 1)
theme_override_font_sizes/font_size = 0
text = "Intro"

[node name="Level2" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 216.0
offset_right = 960.0
offset_bottom = 316.0
theme_override_colors/font_color = Color(0.219608, 0.682353, 0.815686, 1)
theme_override_font_sizes/font_size = 50
text = "Main Level"

[node name="Upgrades" type="Button" parent="."]
layout_mode = 0
offset_left = 416.0
offset_top = 384.0
offset_right = 736.0
offset_bottom = 484.0
theme_override_colors/font_color = Color(0.219608, 0.682353, 0.815686, 1)
theme_override_font_sizes/font_size = 50
text = "Upgrades"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 32.0
offset_right = 832.0
offset_bottom = 127.0
theme_override_colors/font_color = Color(0.121569, 0.807843, 0.278431, 0.807843)
theme_override_font_sizes/font_size = 94
text = "Kodama"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_lx4vd")
autoplay = true
bus = &"BackGround"

[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Upgrades" to="." method="_on_upgrades_pressed"]
